--- a/style.css
+++ b/style.css
@@ -24,13 +24,25 @@
     padding: ;
 } */
 .questions{
-    
-    
+    overflow-x: hidden; 
+    /* display: flex;
+    align-items: center; */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap:20px;
 }
 .question{
     display: flex;
     flex-direction: column;
     gap: 3.2rem;
+    width: 100%;
+    transition: transform 0.5s ease-in-out;
+}
+.question.active{
+    transform: translateX(0%);
+}
+.question.inactive{
+    transform: translateX(100%);
 }
 .inner-width{
     padding:0 2rem;
