--- a/style.css
+++ b/style.css
@@ -3,12 +3,32 @@
     margin: 0;
     padding: 0;
 }
+body{
+    min-height: 100vh;
+    position: relative;
+    width: 100%;   
+}
+.body-tag{
+    min-height: 100vh;
+    background: red;
+    filter: blur(8px);
+    --webkit-filter:blur(8px);
+}
+.container-wrapper{
+    position: absolute;
+    left: 0;
+    right: 0;
+    right: 0;
+    bottom: 0;
+}
 .container{
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    background: transparent;
+    
 }
 
 .survey-slider{
@@ -23,27 +43,27 @@
 /* .question{
     padding: ;
 } */
+
 .questions{
-    overflow-x: hidden; 
-    /* display: flex;
-    align-items: center; */
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap:20px;
+    min-height: 300px;
+    width: 100%;
+    position: relative;
 }
+
 .question{
     display: flex;
     flex-direction: column;
     gap: 3.2rem;
     width: 100%;
-    transition: transform 0.5s ease-in-out;
+    /* transition: transform 0.5s ease-in-out; */
 }
-.question.active{
+
+/* .question.active{
     transform: translateX(0%);
 }
 .question.inactive{
     transform: translateX(100%);
-}
+}  */
 .inner-width{
     padding:0 2rem;
     display: flex;
@@ -53,12 +73,27 @@
 
 .button-container{
     width: 100%;
-
+}
+.dots-container{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+   margin: .8rem 0;
+}
+.spread-content-length{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .spread-content{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 .flex{
     display: flex;
@@ -70,6 +105,7 @@
     padding: 8px 14px;
     border: none;
     outline: none;
+    border-radius: 5px;
 }
 .heading{
     color: rgb(53, 237, 53);
@@ -91,7 +127,7 @@
 .btn{
     padding: 8px 25px;
     outline: none;
-
+    
 }
 .prev-btn{
     border: 1px solid rgb(53, 237, 53);
@@ -99,6 +135,7 @@
         text-transform: uppercase;
     color: rgb(53, 237, 53);
     background: white;
+    cursor: pointer;
 }
 .next-btn{
     border: 1px solid rgb(53, 237, 53);
@@ -106,4 +143,92 @@
     text-transform: uppercase;
     color: white;
     background: rgb(53, 237, 53);
+    cursor: pointer;
 }
+
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Next & previous buttons */
+  
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover {
+    border: 1px solid rgb(53, 237, 53);
+    border-radius: 5px;
+    text-transform: uppercase;
+    color: white;
+    background: rgb(53, 237, 53);
+  }
+  .next:hover{
+    border: 1px solid rgb(53, 237, 53);
+    border-radius: 5px;
+        text-transform: uppercase;
+    color: rgb(53, 237, 53);
+    background: white;
+  }
+  
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 7px;
+    width: 100%;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 10%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  .dot-colored{
+    background-color:rgb(53, 237, 53) ;
+  }
+  
+  /* .active, .dot:hover {
+    background-color: #717171;
+  } */
+  
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+  .flex-no-justify{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    gap: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+ .middle{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+ }
+
+  .emoji-flex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1.2rem;
+    width: 50%;
+  }
+  .emoji{
+    height: 30px;
+  }
+  .recommendation{
+    padding: 3px 9px;
+    resize: none;
+    border-radius: 5px;
+    outline: none;
+  }
